<resources>
    <string name="app_name">CryptoAware</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_watching">Watching</string>
    <string name="relative_layout_coin_notification">Profit\nNotification</string>
    <string name="coin_selection_confirm">Select</string>
    <string name="coin_selection_cancel">Cancel</string>
    <string name="settings_frequency">Update Frequency</string>
    <string name="settings_notifications">Allow Notifications</string>
    <string name="coin_selection_hint">Search coins</string>
    <string name="coin_info_deposit">Coin Quantity</string>
    <string name="coin_info_price">Market Price</string>
    <string name="coin_info_symbol">(BTC)</string>
    <string name="coin_info_market">Market</string>
    <string name="coin_info_date">Date</string>
    <string name="coin_info_buy">Buy</string>
    <string name="coin_info_sell">Sell</string>
    <string name="about_title">CryptoAware</string>
    <string name="about_subtitle">The Cryptocurrency Awareness App</string>
    <string name="about_cryptocompare_title">Big thanks to the fantastic team over at CryptoCompare.com for their free API. This project would not be possible without them!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
