<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/watching_rl_selectorContainer">

    <EditText
        android:id="@+id/watching_edttxt_searchField"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:hint="@string/coin_selection_hint"/>

    <NumberPicker
        android:id="@+id/watching_numpkr_selector"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:layout_gravity="top"/>

    <LinearLayout
        android:id="@+id/watching_ll_buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/watching_btn_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/coin_selection_confirm"/>

        <Button
            android:id="@+id/watching_btn_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/coin_selection_cancel"/>

    </LinearLayout>



</LinearLayout>
