<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.flathers.cryptoaware.CoinInfoActivity">

    <LinearLayout
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/coinInfo_edttxt_coinQty"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/coin_info_deposit"
                android:layout_weight="1.0"/>

            <TextView
                android:id="@+id/coinInfo_txt_coinQty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coin_info_symbol"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/coininfo_edttxt_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/coin_info_price"
                android:layout_weight="0.5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coin_info_symbol"/>

            <Button
                android:id="@+id/coinInfo_btn_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/coin_info_date"/>

        </LinearLayout>

        <ImageButton
            android:id="@+id/coinInfo_imgbtn_addTransaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_menu_add" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
